--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,211 +47,10 @@
 </head>
 <body th:style="'background: url(/assets/preccylogo.jpg) no-repeat center center fixed;'">
 
-<div class="wrapper fadeInDown">
-    <div id="formContent">
-        <!-- Tabs Titles -->
-
-        <!-- Icon -->
-        <div class="fadeIn first">
-            <!--<img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />-->
-            <p>New user? <a class="underlineHover" href="#" id="registerUser">Sign Up Here</a></p>
-        </div>
-
-        <!-- Login Form -->
-        <!--method="post" th:action="@{/ims/loginform}" th:object="${loginform}"-->
-        <form>
-            <br>
-            <!--<p style="color: red;" id="loginerror" th:text="${loginerror}"></p>-->
-            <input type="textarea" id="login" class="form-control" name="email" placeholder="Email">
-            <p style="color: red;" id="errorlogin1"></p>
-            <br/>
-            <!--th:field="*{password}"-->
-            <input type="password" id="password" class="form-control" name="password" placeholder="password">
-            <p style="color: red;" id="errorlogin2"></p>
-            <input type="submit" class="fadeIn fourth" value="Log In" id="button2">
-        </form>
-
-        <!-- Remind Passowrd -->
-        <div id="formFooter">
-            <a class="underlineHover" href="#">Forgot Password?</a>
-        </div>
-
-    </div>
-
-    <!--    Register User Section -->
-    <div id="registerUserFormContent" style="display: none;">
-
-        <div class="fadeIn first">
-            <div class="">
-                <a class="underlineHover"  style="color: royalblue; font-family: 'Big Caslon';" href="/ims"> <-- Back</a>
-            </div>
-            <!--<img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />-->
-            <p class="" style="color: #00BCD4;">Register New User</p>
-
-        </div>
-        <form id="registerNewUser">
-            <br>
-            <p style="color: red;" id="emailError"></p>
-            <input type="email" id="email" class="form-control" name="email" placeholder="Email">
-            <p id="datafield1" style="color: red;"></p>
-            <input type="textarea" id="address" class="form-control" name="address" placeholder="Store Address">
-            <p id="datafield2" style="color: red;"></p>
-            <input type="textarea" id="storename" class="form-control" name="storename" placeholder="Store Name">
-            <p id="datafield3" style="color: red;"></p>
-            <input type="number" id="phonenumber" class="form-control" name="phonenumber" placeholder="Phone Number">
-            <p id="datafield5" style="color: red;"></p>
-            <input type="password" id="userpassword" class="form-control" name="password" placeholder="Password">
-            <p id="datafield4" style="color: red;"></p>
-            <p id="errorpassword" style="color: red;"></p>
-            <input type="password" id="confirmuserpassword" class="form-control" name="confirmpassword" placeholder="Confirm Password">
-            <br>
-            <p id="datafield6" style="color: red;"></p>
-            <select class="form-control-lg" id="usertypee">
-                <option th:value="--select--">Choose User's Role</option>
-                <option th:value="admin">Admin</option>
-                <option th:value="sales">Sales Personel</option>
-            </select>
-            <br/>
-            <input id="button1" type="button" class="fadeIn fourth" value="Register">
-        </form>
-
-    </div>
-    <div id="successfulContent" style="display: none;">
-        <p id="registerResponse"></p><a style="color: red;" href="/ims">CLICK HERE</a><p id="registerResponseTwo"></p>
-    </div>
-    <div id="errorRegistration" style="display: none;">
-        <p id="registererror"></p>
-        <!--<p id="registererror2"></p>-->
-    </div>
-    <div class="modal"><!-- Place at bottom of page --></div>
-</div>
-<script>
-
-    $('#registerUser').on("click", function (){
-        $('#formContent').css('display','none');
-        $('#registerUserFormContent').css('display','block');
-    });
-
-    function spinner() {
-        $body = $("body");
-
-        $(document).on({
-            ajaxStart: function () {
-                $body.addClass("loading");
-            },
-            ajaxStop: function () {
-                $body.removeClass("loading");
-            }
-        });
-        $('#formContent').css('display','none');
-        $('#registerUserFormContent').css('display','none');
-        $('#successfulContent').css('display','block');
-        document.getElementById("registerResponse").textContent="Successfully registered.....";
-        document.getElementById("registerResponseTwo").textContent="to login in";
-    }
-
-    $('#button1').click(function(e){
-        e.preventDefault();
-        // Code goes here
-        var userpassword = $('#userpassword').val();
-        var confirmpassword = $('#confirmuserpassword').val();
-        if (userpassword != confirmpassword){
-            document.getElementById("datafield1").textContent= "";
-            document.getElementById("datafield2").textContent= "";
-            document.getElementById("datafield3").textContent= "";
-            document.getElementById("datafield4").textContent= "";
-            document.getElementById("datafield5").textContent= "";
-            document.getElementById("datafield6").textContent= "";
-            document.getElementById("emailError").textContent= "";
-            document.getElementById("errorpassword").textContent="Passwords do not match";
-            return false;
-        }
-        processRegister();
-    });
-    function processRegister() {
-        var email = $('#email').val();
-        var address = $('#address').val();
-        var storename = $('#storename').val();
-        var userpassword = $('#userpassword').val();
-        var usertype = $('#usertypee').val();
-        var phonenumber = $('#phonenumber').val();
-        if (dataConfirmation(email,address,storename,userpassword,usertype,phonenumber) == false){
-            return false;
-        }
-        $.ajax({
-            type: "POST",
-            url: "/ims/registeruser",
-            data: {email:email,address:address,storename:storename,password:userpassword,usertype:usertype,phonenumber:phonenumber}, // parameters
-            success:spinner(),
-            error:function (res) {
-                registrationFormError(res.responseText)
-            }
-
-        });
-
-    }
 
 
-    function registrationFormError(ResponseText) {
-        $('#formContent').css('display','none');
-        $('#registerUserFormContent').css('display','block');
-        $('#successfulContent').css('display','none');
-        document.getElementById("datafield1").textContent= "";
-        document.getElementById("datafield2").textContent= "";
-        document.getElementById("datafield3").textContent= "";
-        document.getElementById("datafield4").textContent= "";
-        document.getElementById("datafield5").textContent= "";
-        document.getElementById("datafield6").textContent= "";
-        document.getElementById("errorpassword").textContent="";
-        document.getElementById("emailError").textContent= ResponseText;
-    }
+<img src="/user-photos/85/escort2.jpg">
 
-    function dataConfirmation(email,address,storename,userpassword,usertype,phonenumber) {
-        if (email == ""){
-            document.getElementById("datafield1").textContent= "Please supply email";
-            return false;
-        }
-        if (address == ""){
-            document.getElementById("datafield2").textContent= "Please supply address";
-            return false;
-        }
-        if (storename == ""){
-            document.getElementById("datafield3").textContent= "Please supply store-name";
-            return false;
-        }
-        if (usertype == "--select--"){
-            document.getElementById("datafield6").textContent= "Please choose user";
-            return false;
-        }
-        if (userpassword == ""){
-            document.getElementById("datafield4").textContent= "Please supply password";
-            return false;
-        }
-        if (phonenumber == ""){
-            document.getElementById("datafield5").textContent= "Please supply phonenumber";
-            return false;
-        }
-    }
-
-
-
-    $('#button2').click(function(e){
-        // Code goes here
-        var email = $('#login').val();
-        var password = $('#password').val();
-        if (email == ""){
-            document.getElementById("errorlogin1").textContent="Supply email to login";
-            return false;
-        }else
-        if (password == ""){
-            document.getElementById("errorlogin2").textContent="Supply password to login";
-            return false;
-        } else {
-            return true;
-        }
-
-    });
-</script>
 
 </body>
 </html>
